# primerl-experiments

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
environments/: README.md
environments/vb_wordle_proxy/: README.md  pyproject.toml  vb_wordle_proxy.py
experiments/: README.md
experiments/vb-wordle-proxy/: smoke.json
experiments/wordle/: smoke.json
