[project]
name = "vb-wordle-proxy"
description = "Proxy environment that loads the canonical Wordle env"
tags = ["wordle", "games", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
